--- a/example/WM_3T_20mM_L-arginin_B0Drift.yaml
+++ b/example/WM_3T_20mM_L-arginin_B0Drift.yaml
@@ -45,8 +45,8 @@ cest_pool: {
 #   rel_b1: relative amp inhomogeneity, default is 1.0 (float)
 b0: 2.895
 gamma: 267.5153
-b0_inhom: 0.0
-rel_b1: 1
+b0_inhom: -0.0719   # 0.0
+rel_b1: 1.0454      #1
 
 ##### Additional simulation settings
 #           verbose: verbose output, default is False (bool)
